--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -34,7 +34,7 @@ body:before {
     position: absolute;
     top: 0;
     left: 0;
-    background: wallpaper.jpg;
+    background-image: url("wallpaper.jpg");
     content: "";
     z-index: 0;
 }
